--- a/css/media.css
+++ b/css/media.css
@@ -592,7 +592,7 @@
 		width: 100%;
 		height: 100%;
 		z-index: -1;
-		background: rgba(0, 0, 0, 0.3);
+		background: rgba(0, 0, 0, 0.4);
 	}
 	.title-section {
 		padding-top: 35px;
@@ -627,6 +627,16 @@
 	}
 	.portfolio {
 		padding-bottom: 40px;
+	}
+	.item-step__number::before {
+		bottom: -5px;
+		left: -5px;
+		right: -5px;
+		top: -5px;
+		filter: blur(10px);
+	}
+	.steps .title-section {
+		padding-top: 20px;
 	}
 }
 
